--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim/bundle/surround"]
 	path = vim/bundle/surround
 	url = git@github.com:tpope/vim-surround.git
+[submodule "vim/bundle/markdown"]
+	path = vim/bundle/markdown
+	url = git@github.com:tpope/vim-markdown.git
