--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vim/bundle/markdown"]
 	path = vim/bundle/markdown
 	url = git@github.com:tpope/vim-markdown.git
+[submodule "vim/bundle/cucumber"]
+	path = vim/bundle/cucumber
+	url = git@github.com:tpope/vim-cucumber.git
