--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,15 @@
 [submodule "vim/bundle/jinja2"]
 	path = vim/bundle/jinja2
 	url = git@github.com:Glench/Vim-Jinja2-Syntax.git
+[submodule "vim/bundle/less"]
+	path = vim/bundle/less
+	url = git@github.com:groenewege/vim-less.git
+[submodule "vim/bundle/coffeescript"]
+	path = vim/bundle/coffeescript
+	url = git@github.com:kchmck/vim-coffee-script.git
+[submodule "vim/bundle/gist"]
+	path = vim/bundle/gist
+	url = git@github.com:mattn/gist-vim.git
+[submodule "vim/bundle/webapi"]
+	path = vim/bundle/webapi
+	url = git@github.com:mattn/webapi-vim.git
