--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "vim/bundle/peg"]
 	path = vim/bundle/peg
 	url = git@github.com:gf3/peg.vim.git
+[submodule "vim/bundle/salt"]
+	path = vim/bundle/salt
+	url = git@github.com:saltstack/salt-vim.git
